--- a/examples/resources/css/user_guide.css
+++ b/examples/resources/css/user_guide.css
@@ -7,6 +7,34 @@ body {
  background-color: #fff;
 }
 
+.try_it {
+ position: relative;
+}
+.try_it img {
+ position: absolute;
+ overflow: hidden;
+ top: -70px;
+ left: 55px;
+ width: 50px;
+}
+
+br {
+ padding: 10px;
+ margin: 5px;
+}
+
+.param, param {
+ color: darkred;
+ font-family: Chalkboard;
+ font-weight: bold;
+}
+
+.keyword {
+ color: #3253B6;
+ font-weight: bold;
+}
+
+
 a {
  color: #0134c5;
  background-color: transparent;
