--- a/examples/resources/css/user_guide.css
+++ b/examples/resources/css/user_guide.css
@@ -10,6 +10,28 @@ body {
 .try_it {
  position: relative;
 }
+.red {
+ background: red;
+}
+
+.blue {
+ background: blue;
+}
+
+.green {
+ background: green;
+}
+
+.grey {
+ background: grey;
+}
+
+.blue, .red, .green,.grey {
+ width: 100px;
+ height: 100px;
+ float: left;
+}
+
 
 .code-used {
  font-family: "Adobe Devanagari";
@@ -20,6 +42,22 @@ body {
  top: 20px;
  padding: 5px 40px 2px 5px;
  border-color: #d0d0d0;
+ border-style: dashed;
+ border-radius: 4px;
+ border-width: 1px;
+ width: 200px;
+}
+
+
+.code-used2 {
+ font-family: "Adobe Devanagari";
+ font-size: 19px;
+ color: #0000BB;
+ background-color: #aaaaff;
+ position:relative;
+ top: 20px;
+ padding: 5px 40px 2px 5px;
+ border-color: #7c7c7c;
  border-style: dashed;
  border-radius: 4px;
  border-width: 1px;
