--- a/examples/resources/css/user_guide.css
+++ b/examples/resources/css/user_guide.css
@@ -34,19 +34,24 @@ body {
 
 .form {
  position: relative;
- width: 600px;
+ width: 700px;
 }
 .form > div div:first-child::before {
  content: "\00a0";
 }
 .form > div div:first-child {
- width: 150px;
+ padding: 1px;
+ width: 250px;
  text-align: right;
  float: left;
 }
 .form > div div {
+ padding: 1px;
  width: 250px;
  float: left;
+}
+.form > div {
+ clear:both;
 }
 
 .code-used {
@@ -64,6 +69,15 @@ body {
  width: 200px;
 }
 
+
+.flip {
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: 'FlipH';
+  -ms-filter: 'FlipH';
+}
 
 .code-used2 {
  font-family: "Adobe Devanagari";
