--- a/examples/resources/css/user_guide.css
+++ b/examples/resources/css/user_guide.css
@@ -400,7 +400,7 @@ padding: 3px 0 7px 3px;
 .info {
  font-family: Lucida Grande, Verdana, Geneva, Sans-serif;
  color: #333333;
- font-weight: bold;
+ font-weight: lighter;
  font-style: normal;
  background-color:#F9F9F9;
  padding: 20px;
